# hp-Adaptive-Signed-Distance-Field-Octree

./: .editorconfig  .gitignore  Build.bat  Build.sh  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ToDo.txt
Include/HP/: BuildThreadPool.h  Config.h  Consts.h  ContinuityThreadPool.h  Legendre.h  Node.h  Octree.h  Utility.h
Include/Meshing/: BVH.h  Benchmarks.h  Mesh.h  NNOctree.h  ObjParser.h  UnitTests.h  Utility.h
Include/Utility/: Literals.h  MemoryBlock.h
Source/: Benchmarks.cpp  Benchmarks.h  BuildThreadPool.cpp  BuildThreadPool.h  CMakeLists.txt  Config.cpp  Config.h  ContinuityThreadPool.cpp  ContinuityThreadPool.h  Literals.h  Main.cpp  MemoryBlock.h  Node.cpp  Node.h  Octree.cpp  Octree.h  Ray.cpp  Ray.h  UnitTests.cpp  UnitTests.h  Utility.h
Source/HP/: Benchmarks.cpp  Benchmarks.h  BuildThreadPool.cpp  BuildThreadPool.h  Config.cpp  Config.h  ContinuityThreadPool.cpp  ContinuityThreadPool.h  Legendre.h  Node.cpp  Node.h  Octree.cpp  Octree.h  Ray.cpp  UnitTests.cpp  UnitTests.h  Utility.h
Source/Meshing/: BVH.cpp  BVH.h  Benchmarks.cpp  Benchmarks.h  Mesh.cpp  Mesh.h  NNOctree.cpp  NNOctree.h  ObjParser.cpp  ObjParser.h  Simplex.cpp  UnitTests.cpp  UnitTests.h  Utility.cpp  Utility.h
Source/Tests/: CMakeLists.txt  HPBenchmarks.cpp  HPBenchmarks.h  HPUnitTests.cpp  HPUnitTests.h  Main.cpp  MeshingBenchmarks.cpp  MeshingBenchmarks.h  MeshingUnitTests.cpp  MeshingUnitTests.h
Source/Utility/: Literals.h  MemoryBlock.h
